--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,7 +1,6 @@
-    fruits list:
-    apple
-    Hello world
-    orange
-    pomelo
+    <p>List:</p>
+    <p>Game</p>
+    <p>Cube</p>
+    <p>Shovel</p>
     
     Lorem ipsum generator: https://www.lipsum.com/
