--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,5 +1,7 @@
-    <h1>Stephen Payne</h1>
+    <h1>Stephen Payne's Lab 1</h1>
     
+    <img src="kitty1.jpg" alt="Adorable Image">
+
     <p>List:</p>
     <p>Game</p>
     <p>Cube</p>
