--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,10 +1,18 @@
-    <h1>Stephen Payne's Lab 1</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Stephen Payne's Lab 1</title>
+    </head>
+    <body>
+        <h1>Stephen Payne's Lab 1</h1>
     
-    <img src="kitty1.jpg" alt="Adorable Image">
+        <img src="kitty1.jpg" alt="Adorable Image">
 
-    <p>List:</p>
-    <p>Game</p>
-    <p>Cube</p>
-    <p>Shovel</p>
+        <p>List:</p>
+        <p>Game</p>
+        <p>Cube</p>
+        <p>Shovel</p>
     
-    Lorem ipsum generator: https://www.lipsum.com/
+        Lorem ipsum generator: https://www.lipsum.com/
+    </body>
+</html>
