--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -9,9 +9,11 @@
         <img src="kitty1.jpg" alt="Adorable Image">
 
         <p>List:</p>
-        <p>Game</p>
-        <p>Cube</p>
-        <p>Shovel</p>
+        <ul>
+            <li>Game</li>
+            <li>Cube</li>
+            <li>Shovel</li>
+        </ul>
     
         Lorem ipsum generator: https://www.lipsum.com/
     </body>
