--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Stephen Payne's Lab 2</title>
+        <meta name="author" content="Stephen Payne">
+    </head>
+    <body>
 Dr. Terra Nova
 Faculty of Information
 University of Maryland
@@ -53,3 +60,5 @@ UMD motto:
 
 "Fear the Turtle"
 -- How did this happen, anyway.
+    </body>
+</html>
