--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -2,24 +2,28 @@
 <html lang="en">
     <head>
         <title>Stephen Payne's Lab 2</title>
+        <meta charset="utf-8">
         <meta name="author" content="Stephen Payne">
     </head>
     <body>
-        <strong>Dr. Terra Nova</strong>
-        <address><em>Faculty of Information
-        University of Maryland
-        College Park, MD 20742
+        <strong>Dr. Terra Nova</strong><br>
+        <address><em>Faculty of Information<br>
+        University of Maryland<br>
+        College Park, MD 20742<br>
         USA</em>
-        <strong>Tel:</strong> 123-456-7890
-        <strong>Email:</strong> no_reply@example.com
+        <strong>Tel:</strong> <a href="tel:123-456-7890">123-456-7890</a>
+        <strong>Email:</strong> <a href="mailto:no_reply@example.com">no_reply@example.com</a>
         </address>
-        26 Sept 2020
 
-        <strong>Rev. Dover Cliff</strong>
-        <address>1861 Roses Way
-        Glasgow, CT9 XXX
-        UK</address>
-        Re: Dover Cliff university application
+        <p>26 Sept 2020</p>
+
+        <p><strong>Rev. Dover Cliff</strong><br>
+        <address>1861 Roses Way<br>
+        Glasgow, CT9 XXX<br>
+        UK</address></p>
+
+        <h1>Re: Dover Cliff university application</h1>
+
         Dear Dover,
 
         Thank you for your recent application to join us at UMD's iSchool to study for your undergraduate in 2020. I will answer your questions one by one, in the following sections.
