--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -15,7 +15,7 @@
         <strong>Email:</strong> <a href="mailto:no_reply@example.com">no_reply@example.com</a>
         </address>
 
-        <p>26 Sept 2020</p>
+        <p><time>datetime="2020-09-26">26 Sept 2020</time></p>
 
         <strong>Rev. Dover Cliff</strong><br>
         <address>1861 Roses Way<br>
