--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -26,7 +26,7 @@
 
         <p>Dear Dover,</p>
 
-        <p>Thank you for your recent application to join us at UMD's iSchool to study for your undergraduate in 2020. 
+        <p>Thank you for your recent application to join us at <abbr title="University of Maryland">UMD</abbr>'s <abbr title="College of Information Studies">iSchool</abbr> to study for your undergraduate in 2020. 
         I will answer your questions one by one, in the following sections.</p>
 
         <h2>Starting dates</h2>
@@ -50,9 +50,11 @@
         You seem like a committed researcher, and just the kind of person we'd like to have on our team. 
         Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
 
-        Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)
-        Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)
-        HTML and CSS constructs for representing musical scores.
+        <o1>
+            <li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
+            <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</li>
+            <li><abbr title="Hypertext Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
+        </o1>
         So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
 
         <h2>Animals of the Extended Perambulation</h2>
