--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -55,18 +55,21 @@
             <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</li>
             <li><abbr title="Hypertext Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
         </o1>
-        So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
+
+        <p>So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.</p>
 
         <h2>Animals of the Extended Perambulation</h2>
 
         <p>Yes, you are right! As part of my post-doctorate work, I did study animals. To answer your question, my favourite creatures are as follows, with definitions:</p>
 
-        The Canadian Polar bear
-        A large predator, very hungry these days. Feeds almost entirely on seal.
-        The elk
-        An elk is a horned ungulate found primarily in the mountainous regions of British Columbia. It can be seen from railways, and also frequently visits the Banff centre for the arts.
-        The red-tailed hawk
-        An interesting example of historic misinformation: many people believe eagles make the screaming noise associated with them on film. This cry is instead the call of the red-tail.
+        <dl>
+        <dt>The Canadian Polar bear</dt>
+        <dd>A large predator, very hungry these days. Feeds almost entirely on seal.</dd>
+        <dt>The elk</dt>
+        <dd>An elk is a horned ungulate found primarily in the mountainous regions of British Columbia. It can be seen from railways, and also frequently visits the Banff centre for the arts.</dd>
+        <dt>The red-tailed hawk</dt>
+        <dd>An interesting example of historic misinformation: many people believe eagles make the screaming noise associated with them on film. This cry is instead the call of the red-tail.</dd>
+        </dl>
 
         <p>For more of my research, see my <a href="http://umd.edu">research page.</a></p>
 
