--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -52,7 +52,7 @@
 
         <ol>
             <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
-            <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
+            <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30<sup>°</sup>C (86<sup>°</sup>F), when the audience size exponentially increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
             <li><abbr title="Hypertext Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
         </ol>
 
@@ -73,13 +73,13 @@
 
         <p>For more of my research, see my <a href="http://umd.edu">research page.</a></p>
 
-        Yours sincerely,
+        <p>Yours sincerely,</p>
 
-        Dr Terra Nova
+        <p>Dr Terra Nova</p>
 
-        UMD motto:
+        <p>UMD motto:</p>
 
-        "Fear the Turtle"
-        -- How did this happen, anyway.
+        <blockquote> cite="http://umd.edu">"Fear the Turtle"
+        -- How did this happen, anyway.</blockquote>
     </body>
 </html>
