--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -79,7 +79,6 @@
 
         <p>UMD motto:</p>
 
-        <blockquote> cite="http://umd.edu">"Fear the Turtle"
-        -- How did this happen, anyway.</blockquote>
+        <blockquote> "FEAR THE TURTLE" </blockquote>
     </body>
 </html>
