--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -60,7 +60,7 @@
 
         <h2>Animals of the Extended Perambulation</h2>
 
-        <p>Yes, you are right! As part of my post-doctorate work, I did study animals. To answer your question, my favourite creatures are as follows, with definitions:</p>
+        <p>Yes, you are right! As part of my post-doctorate work, I <em>did</em> study animals. To answer your question, my favourite creatures are as follows, with definitions:</p>
 
         <dl>
         <dt>The Canadian Polar bear</dt>
