--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -20,7 +20,7 @@
         <strong>Rev. Dover Cliff</strong><br>
         <address>1861 Roses Way<br>
         Glasgow, CT9 XXX<br>
-        UK</em></address>
+        UK</address></em>
 
         <h1>Re: Dover Cliff university application</h1>
 
