--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -13,7 +13,9 @@
 
   <body>
 
+    <div class="style">
       <h1>Birdwatching</h1>
+    </div>
       <img src="dove.png" alt="a simple dove logo">
 
 
