--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -16,7 +16,9 @@
     <div class="header">
       <h1>Birdwatching</h1>
     </div>
+    <div class="header img">
       <img src="dove.png" alt="a simple dove logo">
+    </div>
 
 
       <ul>
