--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -15,9 +15,8 @@
 
     <div class="header">
       <h1>Birdwatching</h1>
-      <span class="header img">
-      <img src="dove.png" alt="a simple dove logo"></span>
-    </div>
+      <img src="dove.png" alt="a simple dove logo">
+    
 
 
       <ul>
@@ -27,7 +26,7 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
-
+    </div>
 
       <h2>Welcome</h2>
 
