--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -28,6 +28,7 @@
       </ul>
     </div>
 
+    <div class="main">
       <h2>Welcome</h2>
 
       <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
@@ -45,6 +46,6 @@
       <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
 
       <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
-
+    </div>
   </body>
 </html>
