--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -15,7 +15,7 @@
 
     <div class="header">
       <h1>Birdwatching</h1>
-      <span class="header img"><img src="dove.png" alt="a simple dove logo"></span>
+      <img src="dove.png" alt="a simple dove logo">
     
 
     
