--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -18,7 +18,7 @@
       <img src="dove.png" alt="a simple dove logo">
     
 
-    <div class="nav">
+    <nav>
       <ul>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
@@ -26,7 +26,7 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
-    </div>
+    </nav>
     </div>
 
     <div class="main">
