--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -14,8 +14,10 @@
   <body>
 
     <div class="header">
+      <header>
       <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
+    </header>
     
 
     <nav>
