--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -50,13 +50,13 @@
       <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
     </div>
 
-    <!--<div class="footer">-->
+    <div class="footer">
       <div.footer>
       <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
 
       <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
     </div.footer>
-    <!--</div>-->
+    </div>
     </div>
   </body>
 </html>
