--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Birdwatching</title>
+    <title>Stephen Payne's Lab 3</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
@@ -35,9 +35,9 @@
       <h2>Welcome</h2>
 
     <div class="article">
-      <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales fermentum tellus. Integer in orci consequat, faucibus risus eu, hendrerit libero. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam feugiat aliquam lectus ut varius. Suspendisse at nunc dolor. Maecenas eu lorem rutrum, pharetra purus hendrerit, placerat ipsum. Pellentesque condimentum metus quis neque hendrerit, ut convallis nibh imperdiet. Ut eu volutpat velit. Integer ut augue a lectus dignissim vehicula.</p>
 
-      <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
+      <p>Quisque finibus diam sed arcu porta convallis. Etiam at consequat purus. Proin tempor quis turpis sit amet viverra. Etiam et neque nec libero hendrerit rutrum sed eget nisi. Vivamus viverra a dui non mollis. Sed dignissim imperdiet augue sed suscipit. Duis sollicitudin arcu ac orci suscipit euismod. Nullam tempus neque eu metus suscipit, id aliquet tellus tempus. Pellentesque rhoncus volutpat dolor, sit amet lobortis orci tempus a. Quisque consequat dignissim nunc, a blandit urna ullamcorper eget. Maecenas sodales, dui eget euismod rhoncus, dui felis venenatis neque, quis feugiat tortor lectus at massa. Sed vestibulum pretium dignissim. Sed euismod mattis bibendum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
     </div>
 
     <div class="aside">
