--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -15,7 +15,7 @@
 
     <div class="header">
       <header>
-      <h1>Birdwatching</h1>
+      <h1>Stephen Payne's Lab 3</h1>
       <img src="dove.png" alt="a simple dove logo">
     </header>
     
