--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -52,7 +52,7 @@
 
     <div class="footer">
       <footer>
-      <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
+      <p>This website example has been written by Stephen Payne, 2020. Code adapted from MDN.</p>
 
       <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
     </footer>
