--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -54,7 +54,7 @@
       <footer>
       <p>This website example has been written by Stephen Payne, 2020. Code adapted from MDN.</p>
 
-      <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
+      <p>Images are not my own. <a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
     </footer>
     </div>
     </div>
