--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -39,7 +39,6 @@
 
       <p>Quisque finibus diam sed arcu porta convallis. Etiam at consequat purus. Proin tempor quis turpis sit amet viverra. Etiam et neque nec libero hendrerit rutrum sed eget nisi. Vivamus viverra a dui non mollis. Sed dignissim imperdiet augue sed suscipit. Duis sollicitudin arcu ac orci suscipit euismod. Nullam tempus neque eu metus suscipit, id aliquet tellus tempus. Pellentesque rhoncus volutpat dolor, sit amet lobortis orci tempus a. Quisque consequat dignissim nunc, a blandit urna ullamcorper eget. Maecenas sodales, dui eget euismod rhoncus, dui felis venenatis neque, quis feugiat tortor lectus at massa. Sed vestibulum pretium dignissim. Sed euismod mattis bibendum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
     </div>
-  </div>
 
     <div class="aside">
       <h2>Favourite photos</h2>
@@ -50,15 +49,15 @@
       <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
       <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
     </div>
-  
+    </div>
 
-    <div class="footer">
-      <footer>
+    <!--<div class="footer">-->
+      <div.footer>
       <p>This website example has been written by Stephen Payne, 2020. Code adapted from MDN.</p>
 
       <p>Images are not my own. <a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
-    </footer>
-    </div>
+    </div.footer>
+    <!--</div>-->
     
   </body>
 </html>
