--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Stephen Payne's Lab 3</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
@@ -32,7 +33,9 @@
     </div>
 
     <div class="main">
+      <header>
       <h2>Welcome</h2>
+      </header>
 
     <div class="article">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales fermentum tellus. Integer in orci consequat, faucibus risus eu, hendrerit libero. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam feugiat aliquam lectus ut varius. Suspendisse at nunc dolor. Maecenas eu lorem rutrum, pharetra purus hendrerit, placerat ipsum. Pellentesque condimentum metus quis neque hendrerit, ut convallis nibh imperdiet. Ut eu volutpat velit. Integer ut augue a lectus dignissim vehicula.</p>
