--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -16,9 +16,9 @@
 
     <div class="header">
       <header>
-      <h1>Stephen Payne's Lab 3</h1>
-      <img src="dove.png" alt="a simple dove logo">
-    </header>
+      <h1>Stephen Payne's Lab 3 <img src="dove.png" alt="a simple dove logo"></h1>
+      
+      </header>
     
 
     <nav>
