--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -15,7 +15,7 @@
   <body>
 
     <!--<div class="header">-->
-      <header>
+      <div.header>
       <h1>Stephen Payne's Lab 3</h1>
       <img src="dove.png" alt="a simple dove logo">
       
@@ -30,7 +30,7 @@
         <li><a href="#">Forum</a></li>
       </ul>
     </nav>
-  </header>
+  </div.header>
     <!--</div>-->
 
     <div class="main">
