--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -14,8 +14,8 @@
 
   <body>
 
-    <!--<div class="header">-->
-      <div.header>
+    <div class="header">
+      <header>
       <h1>Stephen Payne's Lab 3</h1>
       <img src="dove.png" alt="a simple dove logo">
       
@@ -30,8 +30,8 @@
         <li><a href="#">Forum</a></li>
       </ul>
     </nav>
-  </div.header>
-    <!--</div>-->
+  </header>
+    </div>
 
     <div class="main">
       <header>
