--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -51,10 +51,10 @@
       <h2>Favourite photos</h2>
 
       <div class="aside img">
-      <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
-      <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
-      <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
-      <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
+      <a href="anyoneelsehere.png"><img src="anyoneelsehere.png" alt="Group of NPCs becoming one in Chaos Mario Sunshine"></a>
+      <a href="bup.png"><img src="bup.png" alt="Face of Toad. Bup"></a>
+      <a href="teddiesalute.jpg"><img src="teddiesalute.jpg" alt="Mascot bear saluting"></a>
+      <a href="MontyLOL.png"><img src="MontyLOL.png" alt="Mole character surprised from getting slapped in Super Mario Party"></a>
       </div>
     </aside>
     </div>
