--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Stephen Payne's Lab 4</title>
+    <link href="style.css" rel="stylesheet">
+  </head>
+<body>
+    <header>
+        <h1>Stephen Payne's Lab 4</h1>
+    </header>
 hello world
+</body>
