--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -9,5 +9,13 @@
     <header>
         <h1>Stephen Payne's Lab 4</h1>
     </header>
+    <form>
+      <ul class="flex-outer">
+        <li>
+          <label for="first-name">First Name</label>
+          <input type="text" id="first-name" placeholder="Enter your first name here">
+        </li>
+      </ul>
+    </form>
 hello world
 </body>
