--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -13,7 +13,19 @@
       <ul class="flex-outer">
         <li>
           <label for="first-name">First Name</label>
-          <input type="text" id="first-name" placeholder="Enter your first name here">
+          <input type="text" id="first-name" placeholder="Enter your first name here" maxlength="140">
+        </li>
+        <li>
+          <label for="last-name">Last Name</label>
+          <input type="text" id="last-name" placeholder="Enter your last name here" maxlength="140">
+        </li>
+        <li>
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="Enter your email here">
+        </li>
+        <li>
+          <label for="phone">Phone</label>
+          <input type="tel" id="phone" placeholder="Enter your phone here">
         </li>
       </ul>
     </form>
