--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -27,6 +27,15 @@
           <label for="phone">Phone</label>
           <input type="tel" id="phone" placeholder="Enter your phone here">
         </li>
+        <li>
+          <label for="message">Message</label>
+          <textarea rows="5" cols="33" id="message" placeholder="Enter your message here"></textarea>
+        </li>
+
+        
+        <li>
+          <button type="submit">Submit</button>
+        </li>
       </ul>
     </form>
 hello world
