--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -31,6 +31,23 @@
           <label for="message">Message</label>
           <textarea rows="5" cols="33" id="message" placeholder="Enter your message here"></textarea>
         </li>
+        <li>
+          <p>Age</p>
+          <ul class="flex-inner">
+            <li>
+              <input type="checkbox" id="eighteen-to-thirtyfive">
+              <label for="eighteen-to-thirtyfive">18-35</label>
+            </li>
+            <li>
+              <input type="checkbox" id="thirtyfive-to-fifty">
+              <label for="thirtyfive-to-fifty">35-50</label>
+            </li>
+            <li>
+              <input type="checkbox" id="fifty-to-sixtyfive">
+              <label for="fifty-to-sixtyfive">50-65</label>
+            </li>
+          </ul>
+        </li>
 
         
         <li>
