--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Stephen Payne's Lab 4</h1>
     </header>
-    <form>
+    <form action="/api" method="post">
       <ul class="flex-outer">
         <li>
           <label for="first-name">First Name</label>
@@ -48,8 +48,6 @@
             </li>
           </ul>
         </li>
-
-        
         <li>
           <button type="submit">Submit</button>
         </li>
