--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -32,7 +32,7 @@
           <textarea rows="5" cols="33" id="message" placeholder="Enter your message here"></textarea>
         </li>
         <li>
-          <p>Age</p>
+          <p class="checkbox-list-label">Age</p>
           <ul class="flex-inner">
             <li>
               <input type="checkbox" id="eighteen-to-thirtyfive">
@@ -50,6 +50,9 @@
         </li>
         <li>
           <button type="submit">Submit</button>
+        </li>
+        <li>
+          <button type="button">Activate</button>
         </li>
       </ul>
     </form>
