--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -52,8 +52,9 @@
           <button type="submit">Submit</button>
         </li>
         <li>
-          <button type="button">Activate</button>
+          <button onclick="testFunction()" type="button">Activate</button>
         </li>
       </ul>
     </form>
+    <script src="main.js"></script>
 </body>
