--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -9,5 +9,16 @@
 
     - TRY THIS: type "doc" at the top of this file and press "tab" for Emmet autocomplete support
 -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stephen Payne's Lab 7</title>
+</head>
+<body>
+    
+</body>
+</html>
 
