--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -13,12 +13,17 @@
 <html lang="en">
 <head>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stephen Payne's Lab 7</title>
 </head>
 <body>
-    
+    <h1>Stephen Payne's Lab 7</h1>
 </body>
 </html>
 
