--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -12,7 +12,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="styles.css" type="text/css" rel="stylesheet">
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
@@ -23,7 +23,9 @@
     <title>Stephen Payne's Lab 7</title>
 </head>
 <body>
-    <h1>Stephen Payne's Lab 7</h1>
+    <div class="header">
+        <h1>Stephen Payne's Lab 7</h1>
+    </div>
 </body>
 </html>
 
