--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -26,6 +26,19 @@
     <div class="header">
         <h1>Stephen Payne's Lab 7</h1>
     </div>
+    <div class="chartContainer">
+
+    </div>
+    <form>
+        <button
+          type="submit"
+          class="submitButton"
+          name="submitButton"
+        >Submit</button>
+      </form>
+
+    <script src="canvasjs.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
