--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -26,7 +26,7 @@
     <div class="header">
         <h1>Stephen Payne's Lab 7</h1>
     </div>
-    <div class="chartContainer">
+    <div id="chartContainer">
 
     </div>
     <form>
