--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -23,19 +23,24 @@
     <title>Stephen Payne's Lab 7</title>
 </head>
 <body>
-    <div class="header">
-        <h1>Stephen Payne's Lab 7</h1>
-    </div>
-    <div id="chartContainer">
+    <div class="wrapper">
+        <div class="container flex-outer">
+            <div class="header">
+                <h1>Stephen Payne's Lab 7</h1>
+            </div>
+            <div id="chartContainer">
 
+            </div>
+            <form>
+                <button
+                  type="submit"
+                  class="submitButton"
+                  name="submitButton"
+                >Submit</button>
+              </form>
+        </div>
     </div>
-    <form>
-        <button
-          type="submit"
-          class="submitButton"
-          name="submitButton"
-        >Submit</button>
-      </form>
+      
 
     <script src="canvasjs.min.js"></script>
     <script src="script.js"></script>
