--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -36,7 +36,7 @@
                   type="submit"
                   class="submitButton"
                   name="submitButton"
-                >Submit</button>
+                >Get Restaurants</button>
               </form>
         </div>
     </div>
